tests/fixtures/positive/exceptions/ThrowingExceptionInMain.java
package test;

class App {
  public static void main(String[] args) {
    throw new IllegalStateException("startup failed");
  }
}
