tests/fixtures/negative/exceptions/ThrowingExceptionInMain.java
package test;

class App {
  void run() {
    throw new IllegalStateException("handled by caller");
  }
}
